Trigger docker build from goreleaser workflow

--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -1,9 +1,9 @@
 name: Build and push Docker image
 
 on:
-  release:
-    types:
-      - created
+  workflow_run:
+    workflows: [goreleaser]
+    types: [completed]
 
 jobs:
   build-and-push:
