--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Extract tag name
+        run: |
+          echo "GIT_TAG=$(git tag --sort=-creatordate | head -n 1)" >> $GITHUB_ENV
       - uses: docker/setup-buildx-action@v2
       - uses: docker/login-action@v2
         with:
@@ -20,4 +25,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ github.event.release.tag_name }}
+          tags: ghcr.io/${{ github.repository }}:${{ env.GIT_TAG }}
