--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -12,6 +12,17 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Docker meta
+        uses: docker/metadata-action@v3
+        with:
+          images: |
+            ghcr.io/figglewatts/certexpired
+          tags: |
+            type=semver,pattern={{version}}
+            type=sha
+            type=ref,event=tag
       - name: Extract tag name
         run: |
           echo "GIT_TAG=$(git tag --sort=-creatordate | head -n 1)" >> $GITHUB_ENV
